<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    tools:context=".ui.fragments.AddShopItemFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/arrow_back_ios_24"
        app:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="?attr/appTextColor"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_new_item"
        android:textColor="?appTextColor"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:startIconDrawable="@drawable/shopping_basket_24"
        app:startIconTint="?attr/appButtonBackgroundColor"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="?attr/appButtonBackgroundColor"
        app:hintTextColor="?attr/appButtonBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:hint="@string/item_name"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textCursorDrawable="@color/colorNull" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutItemCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="?attr/appButtonBackgroundColor"
        app:hintTextColor="?attr/appButtonBackgroundColor"
        app:startIconDrawable="@drawable/money_24"
        app:startIconTint="?attr/appButtonBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutItemName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editItemCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:hint="@string/item_cost"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textCursorDrawable="@color/colorNull" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/item_category"
        android:textColor="?attr/appButtonTextColor"
        app:icon="@drawable/arrow_down_24"
        app:backgroundTint="?attr/appButtonBackgroundColor"
        app:iconGravity="end"
        app:iconTint="?attr/appButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layoutItemCost"
        app:layout_constraintTop_toBottomOf="@+id/layoutItemCost"
        app:rippleColor="@color/colorWhite" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_quantity"
        android:layout_marginTop="8dp"
        android:textColor="?attr/appTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnSpinner"
        app:layout_constraintTop_toBottomOf="@+id/btnSpinner" />



    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/add_item"
        android:textColor="?attr/appButtonTextColor"
        app:backgroundTint="?attr/appButtonBackgroundColor"
        app:iconGravity="end"
        app:iconTint="?attr/appButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
        app:rippleColor="@color/colorWhite" />

</androidx.constraintlayout.widget.ConstraintLayout>