<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="appVersion"
            type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/appBackgroundColor"
        tools:context=".ui.SplashActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_sl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/appTextColor"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_now_or_later"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="?attr/appTextColor"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/txtAppName"
            app:layout_constraintStart_toStartOf="@+id/txtAppName"
            app:layout_constraintTop_toBottomOf="@+id/txtAppName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="?attr/appTextColor"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{appVersion}"
            tools:text="v1.0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>